# GenAI

./: .gitignore  pyproject.toml  requirements.txt
01-tokenization/: main.py
02-vector-embedding/: main.py
03-prompting/: 01-zero-shot.py  02-few-shot.py  03-cot-automated.py  03-cot.py
04-agents/: 01-cot-automated.py  01-cot.py
05-rag/: LangChain_README.md  RAG_README.md  chat.py  indexing.py
